Stop text wrapping

--- a/www/default.css
+++ b/www/default.css
@@ -23,6 +23,10 @@ body {
     background-color:#D3FFFF;
 }
 
+#data th, #data td {
+  white-space: nowrap;
+}
+
 #data td {
   font-size: 13px;
 }
@@ -88,10 +92,10 @@ table.table thead .sorting_desc_disabled {
   cursor: pointer;
   *cursor: hand;
 }
- 
+
 table.table thead .sorting { background: url('datatables/images/sort_both.png') no-repeat center right; }
 table.table thead .sorting_asc { background: url('datatables/images/sort_asc.png') no-repeat center right; }
 table.table thead .sorting_desc { background: url('datatables/images/sort_desc.png') no-repeat center right; }
- 
+
 table.table thead .sorting_asc_disabled { background: url('datatables/images/sort_asc_disabled.png') no-repeat center right; }
 table.table thead .sorting_desc_disabled { background: url('datatables/images/sort_desc_disabled.png') no-repeat center right; }
